--- a/screen/package.json
+++ b/screen/package.json
@@ -14,7 +14,10 @@
     "antd": "^5.12.5",
     "axios": "^1.6.2",
     "base-64": "^1.0.0",
+    "copy-to-clipboard": "^3.3.3",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
+    "turndown": "^7.1.2",
     "umi": "^4.0.90"
   },
   "devDependencies": {
